# tfinder

./: '  Cargo.toml  README.md  settings.toml
src/: app.rs  command.rs  config.rs  event_handler.rs  file_pane.rs  finder.rs  main.rs  path_trail.rs  preview.rs  prompt.rs  render.rs  ui_components.rs
src/ui_components/: bot_bar.rs  fav_pane.rs  file_pane.rs  file_panes.rs  nav_arrows.rs  path_breadcrumbs.rs  preview_pane.rs  prompt.rs  top_bar.rs  window_buttons.rs
