[package]
name = "term-finder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
crossterm = "0.27.0"
ratatui = { version = "0.26.0", features = ["all-widgets"]}
anyhow = "1.0.74"
futures = "0.3"
image = "0.24.8"
ratatui-image = "0.8.0"

[[bin]]
name = "term-finder"
